--- a/snippets/script.html
+++ b/snippets/script.html
@@ -15,5 +15,7 @@
   activeNav();
   /* Welcome on Console log */
   welcome();
+  /* Show privacy/cookie dialogue */
+  gdpr_dialogue();
 
 </script>
